--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,6 +15,19 @@
           <li class="nav-item">
             <a class="nav-link" href="/campground/new">New Campground</a>
           </li>
+          <li class="nav-item dropdown ml-auto">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              User Action
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <% if (!currentUser) { %>
+              <li><a class="dropdown-item" href="/login">Log In</a></li>
+              <li><a class="dropdown-item" href="/register">Register</a></li>
+              <% } else {%>
+              <li><a class="dropdown-item" href="/logout">Log Out</a></li>
+              <% } %>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
