Add Authentication Middleware

--- a/views/campground/showid.ejs
+++ b/views/campground/showid.ejs
@@ -9,16 +9,21 @@
             </div>
                 <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= campground.location %></li>
+                <li class="list-group-item">Submitted by <%= campground.author.username%></li>
                 <li class="list-group-item">$<%= campground.price %>/night</li>
                 </ul>
             <div class="card-body">
                 <a href="/campground" class="card-link btn btn-primary">  Back to all Campground </a>
                 <a href="/campground/new"class="card-link btn btn-info" > Create New Campground</a>
+            </div>
+            <% if( currentUser && campground.author.equals(currentUser._id)) { %>
+            <div class="card-body">
                 <a href="/campground/<%=campground._id%>/edit"class="card-link btn btn-success" > Edit</a>
                 <form class="d-inline mb-3" action="/campground/<%=campground._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-danger">Delete this campground</button>
                 </form>
             </div>
+            <% } %>
         </div> 
     </div>
     <div class="col-6">
